--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "author": "Holland Ninow",
   "license": "ISC",
   "dependencies": {
+    "@aws-cdk/aws-elasticbeanstalk": "1.180.0",
+    "@aws-cdk/aws-iam": "1.180.0",
+    "@aws-cdk/aws-s3-assets": "1.180.0",
     "autoprefixer": "^10.4.13",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
