--- a/cdk-eb-infra/package.json
+++ b/cdk-eb-infra/package.json
@@ -15,6 +15,9 @@
     "jest": "^27.5.1"
   },
   "dependencies": {
+    "@aws-cdk/aws-elasticbeanstalk": "^1.195.0",
+    "@aws-cdk/aws-iam": "^1.195.0",
+    "@aws-cdk/aws-s3-assets": "^1.195.0",
     "@aws-cdk/core": "1.180.0"
   }
 }
